fixed overflowing card text

--- a/src/_card2.scss
+++ b/src/_card2.scss
@@ -93,6 +93,7 @@
 		line-height: 1.1rem;
 	}
 	p#card-bio {
+		overflow: hidden;
 		height: 88px;
 		text-align: left;
 	}
